<resources>
    <string name="app_name">Calculadora</string>
    <string name="Siete">7</string>
    <string name="Valor_ini">0</string>
    <string name="Ocho">8</string>
    <string name="Nueve">9</string>
    <string name="Mas">+</string>
    <string name="Cuatro">4</string>
    <string name="Cinco">5</string>
    <string name="Seis">6</string>
    <string name="Menos">-</string>
    <string name="Uno">1</string>
    <string name="Dos">2</string>
    <string name="Tres">3</string>
    <string name="Factor">*</string>
    <string name="Punto">.</string>
    <string name="Cero">0</string>
    <string name="Igual">=</string>
    <string name="Div">/</string>
    <string name="Borrar">C</string>
    <string name="Borrar1">DEL</string>
</resources>
